Added background image

--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
           <span class="long-word">I am</span>
           Sarim Zafar
         </h1>
-                <h3>Cutting edge web geek. Startup fanatic. Computer Science @Waterloo.</h3>
+                <h3>Problem solver. Software builder. Engineer@UWaterloo</h3>
             </div>
             <ul class="list-inline spaced">
-                <li><a href="https://github.com/aamistak" target="_blank" title="Github" alt="Github" onClick="ga('send', '_trackEvent', 'Links', 'Github', 'Github top');"><i class="fa fa-github fa-3x"></i></a>
+                <li><a href="https://github.com/sarimzafar" target="_blank" title="Github" alt="Github" onClick="ga('send', '_trackEvent', 'Links', 'Github', 'Github top');"><i class="fa fa-github fa-3x"></i></a>
                 </li>
-                <li><a href="http://stackoverflow.com/users/1750362/alexander-mistakidis" target="_blank" title="Stackoverflow" alt="Stackoverflow" onClick="ga('send', '_trackEvent', 'Links', 'Stackoverflow', 'Stackoverflow top');"><i class="fa fa-stack-overflow fa-3x"></i></a>
+                <li><a href="http://stackoverflow.com/users/5487384/sarim-zafar" target="_blank" title="Stackoverflow" alt="Stackoverflow" onClick="ga('send', '_trackEvent', 'Links', 'Stackoverflow', 'Stackoverflow top');"><i class="fa fa-stack-overflow fa-3x"></i></a>
                 </li>
-                <li><a href="http://ca.linkedin.com/pub/alexander-mistakidis/4a/975/252" target="_blank" title="LinkedIn" alt="LinkedIn" onClick="ga('send', '_trackEvent', 'Links', 'LinkedIn', 'LinkedIn top');"><i class="fa fa-linkedin fa-3x"></i></a>
+                <li><a href="https://ca.linkedin.com/in/sarimzafar" target="_blank" title="LinkedIn" alt="LinkedIn" onClick="ga('send', '_trackEvent', 'Links', 'LinkedIn', 'LinkedIn top');"><i class="fa fa-linkedin fa-3x"></i></a>
                 </li>
                 <li><a href="mailto:mistakidis@gmail.com" title="Email me" alt="Email me" target="_blank" onClick="ga('send', '_trackEvent', 'Links', 'Email', 'Email top');"><i class="fa fa-envelope-o fa-3x"></i></a>
                 </li>
