--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </li>
                 <li><a href="https://ca.linkedin.com/in/sarimzafar" target="_blank" title="LinkedIn" alt="LinkedIn" onClick="ga('send', '_trackEvent', 'Links', 'LinkedIn', 'LinkedIn top');"><i class="fa fa-linkedin fa-3x"></i></a>
                 </li>
-                <li><a href="mailto:mistakidis@gmail.com" title="Email me" alt="Email me" target="_blank" onClick="ga('send', '_trackEvent', 'Links', 'Email', 'Email top');"><i class="fa fa-envelope-o fa-3x"></i></a>
+                <li><a href="mailto:shzafar@edu.uwaterloo.ca" title="Email me" alt="Email me" target="_blank" onClick="ga('send', '_trackEvent', 'Links', 'Email', 'Email top');"><i class="fa fa-envelope-o fa-3x"></i></a>
                 </li>
                 <li><a href="resume.pdf" target="_blank" class="resume space-m" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume top');">Resumé</a>
                 </li>
@@ -73,7 +73,8 @@
                     <div class="pixelMe toSlideRight" /></div>
             </div>
             <div class="col-md-6 text-center">
-                <h2>I love to create.</h2>
+                <h2>I love challenges.</h2>
+                <p class="lead">I am a 3rd year Mechatronics student with experience in building  </p>
                 <p class="lead">I love to create minimal and impactful user experiences. As a empathetic, curious thinker and a voracious learner, I'm passionate about collaborating on innovation.</p>
             </div>
         </div>
