--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <!-- /Full Page Image Header Area -->
 
     <!-- Intro -->
-    <div id="about" class="intro">
+    <!-- <div id="about" class="intro">
         <div class="container">
             <div class="row">
                 <div class="col-md-2  col-md-offset-2 text-center">
@@ -74,7 +74,7 @@
             </div>
             <div class="col-md-6 text-center">
                 <h2>I love challenges.</h2>
-                <p class="lead">I am a 3rd year Mechatronics student with experience in building  </p>
+                <p class="lead">I am a 3rd year Mechatronics student with experience in bui </p>
                 <p class="lead">I love to create minimal and impactful user experiences. As a empathetic, curious thinker and a voracious learner, I'm passionate about collaborating on innovation.</p>
             </div>
         </div>
@@ -97,7 +97,7 @@
         </div>
     </div>
     </div>
-    <!-- /Intro -->
+
     <div class="call-to-action">
         <div class="container">
             <div class="row">
@@ -107,7 +107,7 @@
             </div>
         </div>
     </div>
-    <!-- Portfolio -->
+
     <div id="portfolio" class="callout">
         <hr>
 
@@ -148,9 +148,9 @@
             </div>
         </div>
     </div>
-    <!-- /Portfolio -->
 
-    <!-- Findoutmore -->
+
+
     <div id="contact" class="call-to-action">
 
         <div class="container">
@@ -160,10 +160,10 @@
             </div>
         </div>
     </div>
-    <!-- /Findoutmore -->
+
     <hr>
 
-    <!-- Footer -->
+
     <footer>
 
         <div class="container">
@@ -193,7 +193,7 @@
                 </div>
             </div>
         </div>
-    </footer>
+    </footer> -->
     <!-- /Footer -->
 
     <script src="js/jquery.js"></script>
