--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
         <div class="vert-text">
             <div class="expandUp">
                 <h1>
-          <div>Hello,</div>
-          <span class="long-word">I am</span>
-          Sarim Zafar
-        </h1>
+                  <div>Hello,</div>
+                  <span class="long-word">I am</span>
+                  Sarim Zafar
+                </h1>
                 <h3>Problem solver. Software builder. Engineer@UWaterloo</h3>
             </div>
             <ul class="list-inline spaced">
@@ -55,11 +55,9 @@
                 </li>
                 <li><a href="mailto:shzafar@edu.uwaterloo.ca" title="Email me" alt="Email me" target="_blank" onClick="ga('send', '_trackEvent', 'Links', 'Email', 'Email top');"><i class="fa fa-envelope-o fa-3x"></i></a>
                 </li>
-                <li><a href="resume.pdf" target="_blank" class="resume space-m" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume top');">Resumé</a>
+                <li><a href="resume-sarim-zafar.pdf" target="_blank" class="resume space-m" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume top');">Resumé</a>
                 </li>
             </ul>
-            <a href="#about" class="btn btn-default btn-lg call-to" onClick="ga('send', '_trackEvent', 'Links', 'What else');">What else?</a>
-
         </div>
 
     </div>
