--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </li>
                 <li><a href="mailto:shzafar@edu.uwaterloo.ca" title="Email me" alt="Email me" target="_blank" onClick="ga('send', '_trackEvent', 'Links', 'Email', 'Email top');"><i class="fa fa-envelope-o fa-3x"></i></a>
                 </li>
-                <li><a href="resume-sarim-zafar.pdf" target="_blank" class="resume space-m" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume top');">Resumé</a>
+                <li><a href="resume.pdf" target="_blank" class="resume space-m" onClick="ga('send', '_trackEvent', 'Links', 'Resume', 'Resume top');">Resumé</a>
                 </li>
             </ul>
         </div>
