--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                   <span class="long-word">I am</span>
                   Sarim Zafar
                 </h1>
-                <h3>Problem solver. Software builder. Engineer@UWaterloo</h3>
+                <h3>Problem solver. Lifelong learner. Software builder. </h3>
             </div>
             <ul class="list-inline spaced">
                 <li><a href="https://github.com/sarimzafar" target="_blank" title="Github" alt="Github" onClick="ga('send', '_trackEvent', 'Links', 'Github', 'Github top');"><i class="fa fa-github fa-3x"></i></a>
